# casefold

./: Cargo.toml
src/: as_ref_hashmap.rs  case_fold.rs  case_fold_impl.rs  lib.rs
