[package]
name = "casefold"
version = "0.2.0"
authors = ["Joshua Booth <joshua.n.booth@gmail.com>"]
edition = "2021"
publish = false
description = "Case insensitive data types"
repository = "https://github.com/jnbooth/casefold"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
